--- a/web/src/assets/style.scss
+++ b/web/src/assets/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Oswald');
+@import url('https://fonts.googleapis.com/css?family=Material+Icons');
 
 $font-size: 16px;
 
@@ -6,6 +7,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   color: #2b2b2b;
   font-size: $font-size;
+  line-height: $font-size;
 }
 
 h1, h2, h3, h4, h5, h6 {
