--- a/web/src/assets/style.scss
+++ b/web/src/assets/style.scss
@@ -8,6 +8,7 @@ body {
   color: #2b2b2b;
   font-size: $font-size;
   line-height: $font-size;
+  background-color: #fafafa;
 }
 
 h1, h2, h3, h4, h5, h6 {
