--- a/web/src/assets/style.scss
+++ b/web/src/assets/style.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Oswald');
 @import url('https://fonts.googleapis.com/css?family=Material+Icons');
 
+@import "./theme";
+
 $font-size: 16px;
 
 body {
@@ -13,4 +15,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Oswald', sans-serif;
+}
+
+h2 {
+  font-size: 1.6rem;
 }
