--- a/web/src/assets/style.scss
+++ b/web/src/assets/style.scss
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Oswald');
 @import url('https://fonts.googleapis.com/css?family=Material+Icons');
-
 @import "./theme";
 
 $font-size: 16px;
+
+html {
+  background-color: #fafafa;
+}
 
 body {
   font-family: 'Open Sans', sans-serif;
   color: #2b2b2b;
   font-size: $font-size;
   line-height: $font-size;
-  background-color: #fafafa;
 }
 
 h1, h2, h3, h4, h5, h6 {
